--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
     <title>Calculadora de renda fixa</title>
 </head>
 <body>
-    <form>
-    <p>Insira os valores solicitados</p>
-    <div class="form">
-    <p>Taxas de juros mensal da poupança</p>
-    <input type="number" name="taxaJurosPoupanca" id="taxaJurosPoupanca" placeholder="Taxa mensal em %" min="0" max="100" value="0.1"></input>    
-    <p>Meses</p>
-    <input type="number" name="quantidadeMeses" id="quantidadeMeses" placeholder="Quantidade de meses" min="0" max="1200" value="0.2"></input>
-    <p>Capital investido</p>
-    <input type="number" name="capitalInvestido" id="capitalInvestido" placeholder="R$" min="0" max="1000000" value="0.3"></input>
-    <p>Resultado</p>
-    <button onclick="calculoJurosPoupanca();">Enviar</button>
     <script src="js/calculadora.js"></script>
-</form>
-</div>
+
+<p>Insira os valores solicitados</p>
+<p>Capital investido</p>
+<input type="number" name="capitalInvestido" id="capitalInvestido" onblur="calcular();">
+
+<p>Meses</p>
+<input type="number" name="quantidadeMeses" id="quantidadeMeses" min="0" max="1200" onblur="calcular();">
+
+<p>Taxas de juros mensal da poupança</p>
+<input type="number" name="taxaJurosPoupanca" id="taxaJurosPoupanca" min="0" max="100" value="0.6842" onblur="calcular();">
+
+<p>Taxa de DI (praticamente igual à SELIC)</p>
+<input type="number" name="taxaDI" id="taxaDI" min="0" max="100" value="0.1365" onblur="calcular();">
+
+<p>Taxas de rendimento da LCI/LCA</p>
+<input type="number" name="taxaLCI" id="taxaLCI" min="0" max="1000" value="100" onblur="calcularLCI();">
+
+<br>
+O montante final da poupança será R$<div id="montantePoupanca"></div>
+
+O montante final da LCI/LCA será R$<div id="montanteLCI"></div>
+
 </body>
 </html>
