--- a/index.html
+++ b/index.html
@@ -5,34 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de renda fixa</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <script src="js/calculadora.js"></script>
 
-<p>Insira os valores solicitados</p>
-<p>Capital investido</p>
-<input type="number" name="capitalInvestido" id="capitalInvestido" onblur="calcularPoupanca(); calcularLCI(); calcularCDB();">
+<div class="container">
+    <div class="box-dados">
+Insira os valores solicitados
+<p class="capitalInvestido">Capital investido</p>
+<input type="number" name="capitalInvestido" id="capitalInvestido" label="capitalInvestido" onblur="calcularPoupanca(); calcularLCI(); calcularCDB();">
 
-<p>Meses</p>
+<p class="meses">Meses</p>
 <input type="number" name="quantidadeMeses" id="quantidadeMeses" min="0" max="1200" value="24" onblur="calcularPoupanca(); calcularLCI(); calcularCDB();">
 
-<p>Taxas de juros mensal da poupança</p>
+<p class="taxaPoupanca">Taxas de juros mensal da poupança</p>
 <input type="number" name="taxaJurosPoupanca" id="taxaJurosPoupanca" min="0" max="100" value="0.6789" onblur="calcularPoupanca();">
 
-<p>Taxa de DI (praticamente igual à SELIC)</p>
+<p class="taxaDI">Taxa de DI (praticamente igual à SELIC)</p>
 <input type="number" name="taxaDI" id="taxaDI" min="0" max="100" value="0.1365" onblur="calcularLCI(); calcularCDB();">
 
-<p>Taxas de rendimento da LCI/LCA</p>
+<p class="taxaLCI">Taxas de rendimento da LCI/LCA</p>
 <input type="number" name="taxaLCI" id="taxaLCI" min="0" max="1000" value="100" onblur="calcularLCI();">
 
-<p> Taxas de rendimento do CDB</p>
+<p class="taxaCDB">Taxas de rendimento do CDB</p>
 <input type="number" name="taxaCDB" id="taxaCDB" min="0" max="1000" value="110" onblur=" calcularCDB();">
 <br>
+</div>
+
+<div class="box-resultados">
 O montante final da poupança será<div id="montantePoupanca"></div>
 <br>
 O montante final da LCI/LCA será<div id="montanteLCI"></div>
 <br>
 O montante final do CDB será<div id="montanteCDB"></div>
-
+</div>
+</div>
 </body>
 </html>
