--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <div class="box-dados">
 Insira os valores solicitados
 <p class="capitalInvestido">Capital investido</p>
-<input type="number" name="capitalInvestido" id="capitalInvestido" required label="capitalInvestido" onblur="calcular()">
+<input type="number" name="capitalInvestido" id="capitalInvestido" required label="capitalInvestido" onblur="calcular()" oninput="range.value=value">
+
+<div>
+    <input type="range" value="70" min="0" max="100" id="slider" oninput="rangenumber.value=value"/>
+    <input type="number" id="rangenumber" min="0" max="100" value="70" oninput="range.value=value">
+</div>
 
 <p class="meses">Meses</p>
 <input type="number" name="quantidadeMeses" id="quantidadeMeses" min="1" max="1200" value="24" onblur="calcular()">
