--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@ Insira os valores solicitados
 <input type="number" class="no-spin" id="rangenumber" min="0" max="240" value="24" oninput="quantidadeMeses.value=value" onblur="calcular()">
 </div>
 
+
+
+
+<input id="screen" type="button"  min="25" max="250" value="30"/>
+
+<button id="minus" min="1" max="10" onclick="minusBpm()">-</button>
+<button id="plus" min="1" max="10" onclick="addBpm()">+</button>
+<input id="bpmInput" type="range"  onchange="calcular()" onchange ="setTempo()" oninput="calcular()" oninput="setTempo()" min="1" max="10">
+
+
+
+
+
 <p class="taxaPoupanca">Taxas de juros mensal da poupança</p>
 <input type="number" name="taxaJurosPoupanca" id="taxaJurosPoupanca" min="0" max="100" value="0.6798" onblur="calcular('poupanca');">
 <p class="obs">(Não é necessário alterar este campo)</p>
